// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a simple Tag instance 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "optionHoverColor": "#fd7400",
    }
  }
>
  <styled.div
    className="ui-tag"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onClick={[Function]}
    onDelete={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    theme={Object {}}
    usedelete={false}
    visible={true}
    width=""
    xcss={null}
  >
    <Label
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      noedit={true}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="test tag"
      theme={Object {}}
      useedit={false}
      visible={true}
      width=""
      xcss={null}
    />
  </styled.div>
</ThemeProvider>
`;

exports[`Test disabling of the simple Tag instance 1`] = `
<Tag
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  onDelete={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  usedelete={true}
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "optionHoverColor": "#fd7400",
      }
    }
  >
    <styled.div
      className="ui-tag"
      contentEditable={false}
      direction="right"
      disabled={true}
      focus={false}
      height=""
      id=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      onDelete={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={Object {}}
      usedelete={true}
      visible={true}
      width=""
      xcss={null}
    >
      <div
        className="ui-tag sc-htoDjs goavDM"
        contentEditable={false}
        direction="right"
        disabled={true}
        height=""
        id=""
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        selected={false}
        style={Object {}}
        width=""
      >
        <Label
          className=""
          contentEditable={false}
          direction="right"
          disabled={true}
          focus={false}
          height=""
          id=""
          location="none"
          noedit={true}
          nohover={false}
          noripple={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDoubleClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onUpdate={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          text="test tag"
          theme={Object {}}
          useedit={false}
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "optionHoverColor": "#fd7400",
              }
            }
          >
            <styled.span
              className="ui-label"
              contentEditable={false}
              disabled={true}
              innerRef={[Function]}
              onBlur={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              style={Object {}}
              suppressContentEditableWarning={true}
              visible={true}
            >
              <span
                className="ui-label sc-bZQynM jDlYnM"
                contentEditable={false}
                disabled={true}
                onBlur={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={Object {}}
                suppressContentEditableWarning={true}
              >
                test tag
              </span>
            </styled.span>
          </ThemeProvider>
        </Label>
        <Styled(ButtonCircle)
          disabled={true}
          iconName="times"
          onClick={[Function]}
          sizing="small"
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#d9534f",
              "color": "#d9534f",
              "opacity": "0.0",
            }
          }
          visible={true}
        >
          <ButtonCircle
            className="sc-gzVnrw cDUdVL"
            contentEditable={false}
            direction="right"
            disabled={true}
            focus={false}
            height=""
            iconName="times"
            iconStyle=""
            id=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            onClick={[Function]}
            selected={false}
            sizing="small"
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#d9534f",
                "color": "#d9534f",
                "opacity": "0.0",
              }
            }
            testing={true}
            theme={Object {}}
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#004358",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "optionHoverColor": "#fd7400",
                }
              }
            >
              <styled.div
                className="ui-button-circle sc-gzVnrw cDUdVL"
              >
                <div
                  className="ui-button-circle sc-gzVnrw cDUdVL sc-bxivhb cLwPhR"
                >
                  <styled.div
                    height="18px"
                    width="18px"
                  >
                    <div
                      className="sc-ifAKCX cmBzsA"
                      height="18px"
                      width="18px"
                    >
                      <Styled(Button)
                        className="sc-gzVnrw cDUdVL"
                        contentEditable={false}
                        direction="right"
                        disabled={true}
                        focus={false}
                        height=""
                        iconName="times"
                        iconStyle=""
                        id=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        onClick={[Function]}
                        selected={false}
                        sizing="small"
                        style={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#d9534f",
                            "color": "#d9534f",
                            "opacity": "0.0",
                          }
                        }
                        testing={true}
                        theme={Object {}}
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <Button
                          className="sc-gzVnrw cDUdVL sc-EHOje YaMUf"
                          contentEditable={false}
                          direction="right"
                          disabled={true}
                          focus={false}
                          height=""
                          iconName="times"
                          iconStyle=""
                          id=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          onClick={[Function]}
                          selected={false}
                          sizing="small"
                          style={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#d9534f",
                              "color": "#d9534f",
                              "opacity": "0.0",
                            }
                          }
                          testing={true}
                          theme={Object {}}
                          visible={true}
                          width=""
                          xcss={null}
                        >
                          <ThemeProvider
                            theme={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#004358",
                                "color": "#000000",
                                "headerBackgroundColor": "#004358",
                                "headerForegroundColor": "#ffffff",
                                "headerHoverColor": "#ffe11a",
                                "hoverColor": "#c0c0c0",
                                "optionHoverColor": "#fd7400",
                              }
                            }
                          >
                            <styled.div
                              className="ui-button nohover sc-gzVnrw cDUdVL sc-EHOje YaMUf"
                              disabled={true}
                              onClick={[Function]}
                              style={
                                Object {
                                  "backgroundColor": "#ffffff",
                                  "borderColor": "#d9534f",
                                  "color": "#d9534f",
                                  "opacity": "0.0",
                                }
                              }
                              visible={true}
                            >
                              <div
                                className="ui-button nohover sc-gzVnrw cDUdVL sc-EHOje YaMUf sc-htpNat cDPcSb"
                                disabled={true}
                                onClick={[Function]}
                                style={
                                  Object {
                                    "backgroundColor": "#ffffff",
                                    "borderColor": "#d9534f",
                                    "color": "#d9534f",
                                    "opacity": "0.0",
                                  }
                                }
                              >
                                <Icon
                                  className=""
                                  contentEditable={false}
                                  direction="right"
                                  disabled={false}
                                  focus={false}
                                  height=""
                                  iconName="times"
                                  id=""
                                  imageFile=""
                                  location="none"
                                  noedit={false}
                                  nohover={false}
                                  noripple={false}
                                  selected={false}
                                  sizing="small"
                                  style={Object {}}
                                  testing={true}
                                  theme={Object {}}
                                  visible={true}
                                  width=""
                                  xcss={null}
                                >
                                  <ThemeProvider
                                    theme={
                                      Object {
                                        "backgroundColor": "#ffffff",
                                        "borderColor": "#004358",
                                        "color": "#000000",
                                        "headerBackgroundColor": "#004358",
                                        "headerForegroundColor": "#ffffff",
                                        "headerHoverColor": "#ffe11a",
                                        "hoverColor": "#c0c0c0",
                                        "optionHoverColor": "#fd7400",
                                      }
                                    }
                                  >
                                    <styled.i
                                      className="ui-icon fa fa-fw fa-times"
                                      contentEditable={false}
                                      direction="right"
                                      disabled={false}
                                      focus={false}
                                      height=""
                                      iconName="times"
                                      id=""
                                      imageFile=""
                                      location="none"
                                      noedit={false}
                                      nohover={false}
                                      noripple={false}
                                      selected={false}
                                      sizing="small"
                                      style={Object {}}
                                      testing={true}
                                      theme={Object {}}
                                      visible={true}
                                      width=""
                                      xcss={null}
                                    >
                                      <i
                                        className="ui-icon fa fa-fw fa-times sc-bdVaJa eFoKEp"
                                        contentEditable={false}
                                        direction="right"
                                        disabled={false}
                                        height=""
                                        id=""
                                        selected={false}
                                        style={Object {}}
                                        width=""
                                      />
                                    </styled.i>
                                  </ThemeProvider>
                                </Icon>
                              </div>
                            </styled.div>
                          </ThemeProvider>
                        </Button>
                      </Styled(Button)>
                    </div>
                  </styled.div>
                </div>
              </styled.div>
            </ThemeProvider>
          </ButtonCircle>
        </Styled(ButtonCircle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tag>
`;

exports[`Test making Tag invisible 1`] = `
<Tag
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  onDelete={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  usedelete={true}
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "optionHoverColor": "#fd7400",
      }
    }
  >
    <styled.div
      className="ui-tag"
      contentEditable={false}
      direction="right"
      disabled={true}
      focus={false}
      height=""
      id=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      onDelete={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={Object {}}
      usedelete={true}
      visible={false}
      width=""
      xcss={null}
    >
      <div
        className="ui-tag sc-htoDjs jWObwB"
        contentEditable={false}
        direction="right"
        disabled={true}
        height=""
        id=""
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        selected={false}
        style={Object {}}
        width=""
      >
        <Label
          className=""
          contentEditable={false}
          direction="right"
          disabled={true}
          focus={false}
          height=""
          id=""
          location="none"
          noedit={true}
          nohover={false}
          noripple={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDoubleClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onUpdate={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          text="test tag"
          theme={Object {}}
          useedit={false}
          visible={false}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "optionHoverColor": "#fd7400",
              }
            }
          >
            <styled.span
              className="ui-label"
              contentEditable={false}
              disabled={true}
              innerRef={[Function]}
              onBlur={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              style={Object {}}
              suppressContentEditableWarning={true}
              visible={false}
            >
              <span
                className="ui-label sc-bZQynM kpBUIv"
                contentEditable={false}
                disabled={true}
                onBlur={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={Object {}}
                suppressContentEditableWarning={true}
              >
                test tag
              </span>
            </styled.span>
          </ThemeProvider>
        </Label>
        <Styled(ButtonCircle)
          disabled={true}
          iconName="times"
          onClick={[Function]}
          sizing="small"
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#d9534f",
              "color": "#d9534f",
              "opacity": "0.0",
            }
          }
          visible={false}
        >
          <ButtonCircle
            className="sc-gzVnrw cDUdVL"
            contentEditable={false}
            direction="right"
            disabled={true}
            focus={false}
            height=""
            iconName="times"
            iconStyle=""
            id=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            onClick={[Function]}
            selected={false}
            sizing="small"
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#d9534f",
                "color": "#d9534f",
                "opacity": "0.0",
              }
            }
            testing={true}
            theme={Object {}}
            visible={false}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#004358",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "optionHoverColor": "#fd7400",
                }
              }
            >
              <styled.div
                className="ui-button-circle sc-gzVnrw cDUdVL"
              >
                <div
                  className="ui-button-circle sc-gzVnrw cDUdVL sc-bxivhb cLwPhR"
                >
                  <styled.div
                    height="18px"
                    width="18px"
                  >
                    <div
                      className="sc-ifAKCX cmBzsA"
                      height="18px"
                      width="18px"
                    >
                      <Styled(Button)
                        className="sc-gzVnrw cDUdVL"
                        contentEditable={false}
                        direction="right"
                        disabled={true}
                        focus={false}
                        height=""
                        iconName="times"
                        iconStyle=""
                        id=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        onClick={[Function]}
                        selected={false}
                        sizing="small"
                        style={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#d9534f",
                            "color": "#d9534f",
                            "opacity": "0.0",
                          }
                        }
                        testing={true}
                        theme={Object {}}
                        visible={false}
                        width=""
                        xcss={null}
                      >
                        <Button
                          className="sc-gzVnrw cDUdVL sc-EHOje YaMUf"
                          contentEditable={false}
                          direction="right"
                          disabled={true}
                          focus={false}
                          height=""
                          iconName="times"
                          iconStyle=""
                          id=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          onClick={[Function]}
                          selected={false}
                          sizing="small"
                          style={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#d9534f",
                              "color": "#d9534f",
                              "opacity": "0.0",
                            }
                          }
                          testing={true}
                          theme={Object {}}
                          visible={false}
                          width=""
                          xcss={null}
                        >
                          <ThemeProvider
                            theme={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#004358",
                                "color": "#000000",
                                "headerBackgroundColor": "#004358",
                                "headerForegroundColor": "#ffffff",
                                "headerHoverColor": "#ffe11a",
                                "hoverColor": "#c0c0c0",
                                "optionHoverColor": "#fd7400",
                              }
                            }
                          >
                            <styled.div
                              className="ui-button nohover sc-gzVnrw cDUdVL sc-EHOje YaMUf"
                              disabled={true}
                              onClick={[Function]}
                              style={
                                Object {
                                  "backgroundColor": "#ffffff",
                                  "borderColor": "#d9534f",
                                  "color": "#d9534f",
                                  "opacity": "0.0",
                                }
                              }
                              visible={false}
                            >
                              <div
                                className="ui-button nohover sc-gzVnrw cDUdVL sc-EHOje YaMUf sc-htpNat dgWPqA"
                                disabled={true}
                                onClick={[Function]}
                                style={
                                  Object {
                                    "backgroundColor": "#ffffff",
                                    "borderColor": "#d9534f",
                                    "color": "#d9534f",
                                    "opacity": "0.0",
                                  }
                                }
                              >
                                <Icon
                                  className=""
                                  contentEditable={false}
                                  direction="right"
                                  disabled={false}
                                  focus={false}
                                  height=""
                                  iconName="times"
                                  id=""
                                  imageFile=""
                                  location="none"
                                  noedit={false}
                                  nohover={false}
                                  noripple={false}
                                  selected={false}
                                  sizing="small"
                                  style={Object {}}
                                  testing={true}
                                  theme={Object {}}
                                  visible={true}
                                  width=""
                                  xcss={null}
                                >
                                  <ThemeProvider
                                    theme={
                                      Object {
                                        "backgroundColor": "#ffffff",
                                        "borderColor": "#004358",
                                        "color": "#000000",
                                        "headerBackgroundColor": "#004358",
                                        "headerForegroundColor": "#ffffff",
                                        "headerHoverColor": "#ffe11a",
                                        "hoverColor": "#c0c0c0",
                                        "optionHoverColor": "#fd7400",
                                      }
                                    }
                                  >
                                    <styled.i
                                      className="ui-icon fa fa-fw fa-times"
                                      contentEditable={false}
                                      direction="right"
                                      disabled={false}
                                      focus={false}
                                      height=""
                                      iconName="times"
                                      id=""
                                      imageFile=""
                                      location="none"
                                      noedit={false}
                                      nohover={false}
                                      noripple={false}
                                      selected={false}
                                      sizing="small"
                                      style={Object {}}
                                      testing={true}
                                      theme={Object {}}
                                      visible={true}
                                      width=""
                                      xcss={null}
                                    >
                                      <i
                                        className="ui-icon fa fa-fw fa-times sc-bdVaJa eFoKEp"
                                        contentEditable={false}
                                        direction="right"
                                        disabled={false}
                                        height=""
                                        id=""
                                        selected={false}
                                        style={Object {}}
                                        width=""
                                      />
                                    </styled.i>
                                  </ThemeProvider>
                                </Icon>
                              </div>
                            </styled.div>
                          </ThemeProvider>
                        </Button>
                      </Styled(Button)>
                    </div>
                  </styled.div>
                </div>
              </styled.div>
            </ThemeProvider>
          </ButtonCircle>
        </Styled(ButtonCircle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tag>
`;

exports[`Test retrieval of Tag props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "onDelete": [Function],
  "onMouseOut": [Function],
  "onMouseOver": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": Object {},
  "usedelete": false,
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
